Update SessionImpl.java